AV/PL/AV/parseTree3a.css
html, body {
    margin: 0;
}

#container {
    width: 1000px;
    height: 900px;
}

.avcontainer {
    width: 1000px;
    margin: auto;
    height: 900px;
    text-align: center;
    padding: 0;
}

.jsavnode {
    width: 6px;
    max-width: 6px;
}

.jsavhorizontalarray  {
    min-width : 165px;
    max-width : 165px;
    max-height: 30px;
    min-height: 30px;
}


p.jsavoutput.jsavline {
    height: 0;  
}

div.jsavlabel {
    margin-bottom: 0;
    margin-top: 0;
}


.labelstyle {
    font-weight: bold;
    text-align: center;
    
}

.jsavhighlight {
    background-color: red !important;
}
div.avcontainer  div.jsavcanvas ol.jsavarray   {
    background-color: #ddd;
    max-width: 170px;
    margin: auto;
    margin-bottom: 10;
    max-height: 30;
    min-height: 30;
}

.wide {
    padding-right: 9px;
}

.wider {
    padding-right: 20px;
}

ol.jsavarray .defaultCellStyle {
    border: none;
    box-shadow : none; 
    background-color: #ddd;
}

.jsavhorizontalarray .jsavnode.lambdaWidth {
    min-width : 22px !important;
    max-width : 22px !important;
}


.jsavhorizontalarray .jsavnode.oneCharWidth {
    min-width : 13px !important;
    max-width : 13px !important;
}

.jsavhorizontalarray .jsavnode.narrow {
    min-width : 7px !important;
    max-width : 7px !important;
}

ol.jsavarray .emptyWidth {
    width : 0;
    min-width : 0;
}

.lambdaexphighlight { 
    color : red;
    font-weight: bold;
}

.lambdaexpunhighlight { 
    color : black;
    font-weight: normal;
}

